--- a/raphi_theme/page.html
+++ b/raphi_theme/page.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>{{site_name}}</title>
-        <link rel="stylesheet" href="github.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/github.css">
+        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="assets/page.css">
     </head>
     <body>
         {{content}}
