--- a/raphi_theme/page.html
+++ b/raphi_theme/page.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>{{site_name}}</title>
-        <link rel="stylesheet" href="assets/github.css">
-        <link rel="stylesheet" href="assets/style.css">
-        <link rel="stylesheet" href="assets/page.css">
+        <link rel="stylesheet" href="/assets/github.css">
+        <link rel="stylesheet" href="/assets/style.css">
+        <link rel="stylesheet" href="/assets/page.css">
     </head>
     <body>
-        {{content}}
+        <div class="wrapper">
+            {{content}}
+        </div>
     </body>
 </html>
