--- a/raphi_theme/pdf.html
+++ b/raphi_theme/pdf.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>{{site_name}}</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/github.css">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="assets/pdf.css">
